# Dr-Palaskar-Hospital-Website

./: README.md
drpalaskar/backend/: data.py  download_assets.py  main.py  pyproject.toml  requirements.txt
drpalaskar/frontend/: .gitignore  (+4 more)
erp/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
erp/app/: main.py
erp/app/core/: config.py  constants.py  database.py  deps.py  security.py
erp/app/exceptions/: __init__.py  handlers.py
erp/app/frontend/static/css/: app.css
erp/app/frontend/static/js/: admin.js  common.js  landing.js  login.js  portal.js  staff.js  views.js
erp/app/frontend/templates/: admin.html  index.html  login.html  portal.html  staff.html
erp/app/models/: __init__.py  billing.py  enums.py  facility.py  patient.py  pharmacy.py  user.py
erp/app/repositories/: base.py  billing.py  facility.py  patients.py  users.py
erp/app/routers/: appointments.py  auth.py  billing.py  dashboard.py  frontend.py  patients.py  pharmacy.py  public.py  staff.py  wards.py
erp/app/schemas/: operations.py  patient.py  staff.py
erp/app/services/: appointment_service.py  auth_service.py  billing_service.py  dashboard_service.py  patient_service.py  pharmacy_service.py  staff_service.py  ward_service.py
erp/app/utils/: catalog.py  files.py  ids.py  rate_limit.py  seeder.py  timeslots.py
erp/scripts/: reset_db.py
erp/tests/: conftest.py  test_admissions.py  test_auth.py  test_consult_pharmacy.py  test_hr_dashboard.py  test_ops_billing.py  test_patients.py  test_public_booking.py
erp/tests/ui/: package.json  smoke.mjs
(+39 files in other folders)
