[project]
name = "dr-palaskar-hospital-erp"
version = "1.0.0"
description = "Dr. Palaskar Hospital ERP backend built with FastAPI."
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "PyJWT==2.10.1",
    "bcrypt==4.2.1",
    "python-multipart==0.0.19",
    "jinja2==3.1.4",
    "pillow==11.0.0",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"